# Hv-PugBot

./: .gitignore  404.html  Dockerfile  README.md  compose.yaml  config.cfg  config.cfg.example  index.html  mkdocs.yml  pugbot.bat  pyproject.toml  pytest.ini  python-version-used.txt  requirements.txt
.github/workflows/: checks.yml  mkdocs.yml
commands/: index.html
doc/: commands.md
docs/: commands.md  index.md
modules/: bot.backpy  bot.py  client.py  console.py  players.py  stats3.py
pubobot/: __main__.py  bot.py  client.py  config.py  console.py  memberformatter.py  performance_stats.py  pickup_stats.py  player_stats.py  scheduler.py  stats3.py  utils.py
pubobot/providers/: ut2k4_statsdb_provider.py
search/: search_index.json
test/: conftest.py  test_bot.py  test_memberformatter.py  test_pickup.py
test/scenario/: conftest.py  matcher.py  test_basic.py  test_last.py  test_matcher.py  test_picks.py  test_require_ready.py  test_who.py
